--- a/style.css
+++ b/style.css
@@ -99,15 +99,15 @@ padding-top: 150px;
 padding-bottom: 50px;
 }
 button[type=submit] {
-background-color:red;
-color: white;
-padding: 10px 10px;
-border: none;
-width: 15%;
-height: 50px;
-margin-bottom: 20px;
-text-align: center;
-}
+
+ border: 2px solid red;
+  border-radius: 5px;
+  background-color: red;
+  color: white;
+  padding: 14px 28px;
+  font-size: 16px;
+
+  }
 #services h1{
 font-size: 50px;
 }
@@ -208,10 +208,9 @@ font-size: 20px;
 }
 
 .svc {
-width: 45%;
-height: 45%;
+width: 40%;
+height: 40%;
 margin: 10px;
-align-content: left;
 
 }
 .flexbox{
@@ -222,12 +221,15 @@ margin-bottom: 100px;
 
 }
 #svc{
-text-align: center;
+text-align: left;
 
 }
 #service h1{
    font-size: 48px;
    padding-left: 100px;
+}
+#svc p {
+  padding-right: 25px;
 }
 
                     /* Blue */
@@ -302,7 +304,15 @@ font-size: 38px;
 padding-left: 80px;
 padding-right: 80px;
 }
-
+.btn{
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+}
 
                           /* Footer */
 
@@ -408,6 +418,9 @@ text-align: center;
 .abs{
   font-size: 13px;
 }
+.abs b{
+  font-size: 9px;
+}
 .blew{
   display: inline-block;
 }
@@ -428,7 +441,7 @@ text-align: center;
    #todo p{
     font-size: 15px;
   }
-  
+ 
 
 }
 
@@ -438,8 +451,7 @@ text-align: center;
 @media only screen and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
-
-
+  
  #logo{
 margin-left: 4px;
 }
@@ -508,10 +520,10 @@ text-align: center;
 } 
 
 .flex-container {
-  display:inline-block;
+  display:flex;
   padding-bottom: 50px;
 
-   }
+}
 
 /* blue */
 
@@ -525,12 +537,8 @@ text-align: center;
 .d{
   margin: 35px;
 }
-
-.abs{
-  padding-left: 5px;
-}
   /*To do*/
-          /*Todo*/
+          
   #todo{
     display: inline-block;
     margin-left: 50px;
@@ -543,6 +551,9 @@ text-align: center;
     font-size:25px;
   }
   
-
+  /*To do*/
+  .footer{
+    display: flex;
+  }
 
 }
