--- a/style.css
+++ b/style.css
@@ -304,14 +304,18 @@ font-size: 38px;
 padding-left: 80px;
 padding-right: 80px;
 }
-.btn{
-  border: 2px solid black;
-  border-radius: 5px;
-  background-color: white;
-  color: black;
-  padding: 14px 28px;
+.button{
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
   font-size: 16px;
   cursor: pointer;
+  background-color: white;
+  color: black;
+  border: 2px solid #555555;
 }
 
                           /* Footer */
