--- a/style.css
+++ b/style.css
@@ -305,16 +305,13 @@ padding-left: 80px;
 padding-right: 80px;
 }
 .button{
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
+  
+  border: 2px solid black;
+  border-radius: 5px;
   background-color: white;
   color: black;
+  padding: 14px 28px;
+  font-size: 16px;
   border: 2px solid #555555;
 }
 
