--- a/style.css
+++ b/style.css
@@ -304,8 +304,9 @@ font-size: 38px;
 padding-left: 80px;
 padding-right: 80px;
 }
-.button{
-  
+button[type=button] {
+
+ 
   border: 2px solid black;
   border-radius: 5px;
   background-color: white;
