--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ overflow: hidden;
 padding-top: 150px;
 padding-bottom: 50px;
 }
-button[type=submit] {
+ input[type=submit]  {
 
  border: 2px solid red;
   border-radius: 5px;
@@ -304,7 +304,7 @@ font-size: 38px;
 padding-left: 80px;
 padding-right: 80px;
 }
-button[type=button] {
+input[type=button] {
 
  
   border: 2px solid black;
